--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -12,4 +12,17 @@ body {
 
 .intro {
   font-size: 4em;
+  font-weight: normal;
+}
+
+.profile-card {
+  border: 1px solid black;
+  border-radius: 12px;
+  //width: 150%;
+  font-size: x-large;
+  margin: 1em;
+  ul {
+    margin: 1em;
+    list-style-type: none;
+  }
 }
