--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,20 +9,82 @@ body {
   background-color: #f5f5f5;
 }
 
+header {
+  font-size: 2.5em;
+}
+
 .intro {
   font-size: 4em;
   font-weight: normal;
+  margin-bottom: 0.5em;
 }
 
 .profile-card {
-  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 50%;
+  width: 70%;
+  border: 3px solid #f5f5f5;
   border-radius: 12px;
   font-size: x-large;
+  margin: 1em;
+}
+
+.profile-card .name-container {
+  width: 70%;
   margin: 1em;
 }
 
 .profile-card ul {
   margin: 1em;
   list-style-type: none;
+}
+
+.profile-card .details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.profile-card .pfp-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 5%;
+}
+
+.profile-card .pfp-container .profile-picture {
+  width: 70%;
+  border-radius: 50%;
+  border: 3px solid #f5f5f5;
+}
+
+.profile-card .about-me {
+  margin: 1em;
+}
+
+.skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 /*# sourceMappingURL=App.css.map */
