--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -10,19 +10,55 @@ body {
   background-color: #f5f5f5;
 }
 
+header {
+  font-size: 2.5em;
+}
+
 .intro {
   font-size: 4em;
   font-weight: normal;
+  margin-bottom: 0.5em;
 }
 
 .profile-card {
-  border: 1px solid black;
+  display: flex;
+  height: 50%;
+  width: 70%;
+  border: 3px solid #f5f5f5;
   border-radius: 12px;
-  //width: 150%;
   font-size: x-large;
   margin: 1em;
+  .name-container {
+    width: 70%;
+    margin: 1em;
+  }
   ul {
     margin: 1em;
     list-style-type: none;
   }
+  .details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .pfp-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5%;
+    .profile-picture {
+      width: 70%;
+      border-radius: 50%;
+      border: 3px solid #f5f5f5;
+    }
+  }
+  .about-me {
+    margin: 1em;
+  }
+}
+
+.skills {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
