--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,7 +24,7 @@ header {
   display: -ms-flexbox;
   display: flex;
   height: 50%;
-  width: 70%;
+  width: 85%;
   border: 3px solid #f5f5f5;
   border-radius: 12px;
   font-size: x-large;
@@ -64,10 +64,11 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   margin-right: 5%;
+  margin-top: 2em;
 }
 
 .profile-card .pfp-container .profile-picture {
-  width: 70%;
+  width: 50%;
   border-radius: 50%;
   border: 3px solid #f5f5f5;
 }
@@ -86,5 +87,45 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .profile-card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: large;
+    height: 70%;
+  }
+  .profile-card .pfp-container .profile-picture {
+    width: 40%;
+  }
+  .profile-card .details {
+    margin-top: 1em;
+    margin-bottom: 2.5em;
+  }
+  .skills {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .about-header {
+    font-size: 2em;
+  }
+  .profile-card {
+    font-size: medium;
+    height: 75%;
+  }
+  .profile-card .details {
+    margin-bottom: 0;
+    margin-top: 0.5em;
+  }
 }
 /*# sourceMappingURL=App.css.map */
