--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -23,7 +23,7 @@ header {
 .profile-card {
   display: flex;
   height: 50%;
-  width: 70%;
+  width: 85%;
   border: 3px solid #f5f5f5;
   border-radius: 12px;
   font-size: x-large;
@@ -46,8 +46,9 @@ header {
     align-items: center;
     justify-content: center;
     margin-right: 5%;
+    margin-top: 2em;
     .profile-picture {
-      width: 70%;
+      width: 50%;
       border-radius: 50%;
       border: 3px solid #f5f5f5;
     }
@@ -61,4 +62,41 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1000px) {
+  .profile-card {
+    flex-direction: column;
+    font-size: large;
+    height: 70%;
+    .pfp-container {
+      .profile-picture {
+        width: 40%;
+      }
+    }
+    .details {
+      margin-top: 1em;
+      margin-bottom: 2.5em;
+    }
+  }
+
+  .skills {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .about-header {
+    font-size: 2em;
+  }
+  .profile-card {
+    font-size: medium;
+    height: 75%;
+    .details {
+      margin-bottom: 0;
+      margin-top: 0.5em;
+    }
+  }
 }
