--- a/src/css/App.css
+++ b/src/css/App.css
@@ -77,6 +77,15 @@ header {
   margin: 1em;
 }
 
+.profile-card .about-me .socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+}
+
 .skills {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -113,6 +122,10 @@ header {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .skills svg {
+    width: 135%;
+    margin-left: -3em;
+  }
 }
 
 @media screen and (max-width: 400px) {
@@ -126,6 +139,10 @@ header {
   .profile-card .details {
     margin-bottom: 0;
     margin-top: 0.5em;
+  }
+  .skills svg {
+    width: 135%;
+    margin-left: -2.5em;
   }
 }
 /*# sourceMappingURL=App.css.map */
