--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -55,6 +55,10 @@ header {
   }
   .about-me {
     margin: 1em;
+    .socials {
+      display: flex;
+      justify-content: right;
+    }
   }
 }
 
@@ -84,6 +88,10 @@ header {
 
   .skills {
     flex-direction: column;
+    svg {
+      width: 135%;
+      margin-left: -3em;
+    }
   }
 }
 
@@ -97,6 +105,13 @@ header {
     .details {
       margin-bottom: 0;
       margin-top: 0.5em;
+    }
+  }
+
+  .skills {
+    svg {
+      width: 135%;
+      margin-left: -2.5em;
     }
   }
 }
