--- a/src/css/App.css
+++ b/src/css/App.css
@@ -11,79 +11,23 @@ body {
 
 header {
   font-size: 2.5em;
+  padding-bottom: 2em;
 }
 
-.intro {
-  font-size: 4em;
+.typewriter-container {
+  text-align: center;
+}
+
+.intro-h1 {
+  font-size: 6em;
   font-weight: normal;
   margin-bottom: 0.5em;
 }
 
-.profile-card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 50%;
-  width: 85%;
-  border: 3px solid #f5f5f5;
-  border-radius: 12px;
-  font-size: x-large;
-  margin: 1em;
-}
-
-.profile-card .name-container {
-  width: 70%;
-  margin: 1em;
-}
-
-.profile-card ul {
-  margin: 1em;
-  list-style-type: none;
-}
-
-.profile-card .details {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.profile-card .pfp-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-right: 5%;
-  margin-top: 2em;
-}
-
-.profile-card .pfp-container .profile-picture {
-  width: 50%;
-  border-radius: 50%;
-  border: 3px solid #f5f5f5;
-}
-
-.profile-card .about-me {
-  margin: 1em;
-}
-
-.profile-card .about-me .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+.intro-h2 {
+  font-size: 3em;
+  font-weight: normal;
+  margin-bottom: 0.5em;
 }
 
 .skills {
@@ -100,21 +44,102 @@ header {
   height: 100%;
 }
 
+.card-container {
+  background-color: white;
+  max-width: 1920px;
+  width: 70%;
+  height: auto;
+  border-radius: 14px;
+  -webkit-box-shadow: 0px 10px 30px #16919c;
+          box-shadow: 0px 10px 30px #16919c;
+}
+
+.card-container .header-image {
+  background-position: 0px 0px;
+  background-repeat: repeat;
+  background-size: contain;
+  text-align: center;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+}
+
+.card-container img {
+  margin: auto;
+  width: 250px;
+  border: solid #48d1cc 4px;
+  border-radius: 50%;
+  margin-top: 75px;
+}
+
+.card-container .name {
+  font-weight: bold;
+  font-size: 2em;
+  text-align: center;
+  padding: 1em;
+}
+
+.card-container .social-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: solid #48d1cc 1px;
+  text-align: center;
+}
+
+.card-container .about-me {
+  border-top: solid #48d1cc 1px;
+  text-align: center;
+}
+
+.card-container .about-me .text {
+  padding: 1em;
+  font-size: 1.2em;
+}
+
+.card-container .socials {
+  padding: 1em;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.card-container .details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card-container ul {
+  list-style-type: none;
+  margin-bottom: 1em;
+  font-size: 1.5em;
+}
+
 @media screen and (max-width: 1000px) {
-  .profile-card {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    font-size: large;
-    height: 70%;
+  .intro-h1 {
+    font-size: 4em;
   }
-  .profile-card .pfp-container .profile-picture {
-    width: 40%;
+  .intro-h2 {
+    font-size: 2em;
   }
-  .profile-card .details {
-    margin-top: 1em;
-    margin-bottom: 2.5em;
+  .card-container img {
+    width: 180px;
+  }
+  .card-container .name {
+    font-size: 1.4em;
+  }
+  .card-container ul {
+    font-size: 1em;
+  }
+  .card-container .about-me .text {
+    padding: 1em;
+    font-size: medium;
   }
   .skills {
     -webkit-box-orient: vertical;
@@ -129,16 +154,27 @@ header {
 }
 
 @media screen and (max-width: 400px) {
+  .intro-h1 {
+    font-size: 3em;
+  }
+  .intro-h2 {
+    font-size: 2em;
+  }
   .about-header {
     font-size: 2em;
   }
-  .profile-card {
-    font-size: medium;
-    height: 75%;
+  .card-container {
+    width: 85%;
   }
-  .profile-card .details {
-    margin-bottom: 0;
-    margin-top: 0.5em;
+  .card-container img {
+    width: 170px;
+  }
+  .card-container .name {
+    font-size: 1.4em;
+  }
+  .card-container .about-me .text {
+    padding: 1em;
+    font-size: smaller;
   }
   .skills svg {
     width: 135%;
