--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -12,54 +12,23 @@ body {
 
 header {
   font-size: 2.5em;
+  padding-bottom: 2em;
 }
 
-.intro {
-  font-size: 4em;
+.typewriter-container {
+  text-align: center;
+}
+
+.intro-h1 {
+  font-size: 6em;
   font-weight: normal;
   margin-bottom: 0.5em;
 }
 
-.profile-card {
-  display: flex;
-  height: 50%;
-  width: 85%;
-  border: 3px solid #f5f5f5;
-  border-radius: 12px;
-  font-size: x-large;
-  margin: 1em;
-  .name-container {
-    width: 70%;
-    margin: 1em;
-  }
-  ul {
-    margin: 1em;
-    list-style-type: none;
-  }
-  .details {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .pfp-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-right: 5%;
-    margin-top: 2em;
-    .profile-picture {
-      width: 50%;
-      border-radius: 50%;
-      border: 3px solid #f5f5f5;
-    }
-  }
-  .about-me {
-    margin: 1em;
-    .socials {
-      display: flex;
-      justify-content: right;
-    }
-  }
+.intro-h2 {
+  font-size: 3em;
+  font-weight: normal;
+  margin-bottom: 0.5em;
 }
 
 .skills {
@@ -70,22 +39,99 @@ header {
   height: 100%;
 }
 
-@media screen and (max-width: 1000px) {
-  .profile-card {
-    flex-direction: column;
-    font-size: large;
-    height: 70%;
-    .pfp-container {
-      .profile-picture {
-        width: 40%;
-      }
-    }
-    .details {
-      margin-top: 1em;
-      margin-bottom: 2.5em;
+.card-container {
+  background-color: white;
+  max-width: 1920px;
+  width: 70%;
+  height: auto;
+  border-radius: 14px;
+  box-shadow: 0px 10px 30px hsl(185, 75%, 35%);
+
+  .header-image {
+    //background-image: url("../images/react-background.jpg");
+    //background-color: white;
+    background-position: 0px 0px;
+    background-repeat: repeat;
+    background-size: contain;
+    text-align: center;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+  }
+
+  img {
+    margin: auto;
+    width: 250px;
+    border: solid #48d1cc 4px;
+    border-radius: 50%;
+    margin-top: 75px;
+  }
+
+  .name {
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+    padding: 1em;
+  }
+
+  .social-container {
+    display: flex;
+    border-top: solid #48d1cc 1px;
+    text-align: center;
+  }
+
+  .about-me {
+    border-top: solid #48d1cc 1px;
+    text-align: center;
+    .text {
+      padding: 1em;
+      font-size: 1.2em;
     }
   }
 
+  .socials {
+    padding: 1em;
+    flex: 1;
+  }
+
+  .details {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  ul {
+    list-style-type: none;
+    margin-bottom: 1em;
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .intro-h1 {
+    font-size: 4em;
+  }
+
+  .intro-h2 {
+    font-size: 2em;
+  }
+
+  .card-container {
+    img {
+      width: 180px;
+    }
+    .name {
+      font-size: 1.4em;
+    }
+    ul {
+      font-size: 1em;
+    }
+    .about-me {
+      .text {
+        padding: 1em;
+        font-size: medium;
+      }
+    }
+  }
   .skills {
     flex-direction: column;
     svg {
@@ -96,15 +142,31 @@ header {
 }
 
 @media screen and (max-width: 400px) {
+  .intro-h1 {
+    font-size: 3em;
+  }
+
+  .intro-h2 {
+    font-size: 2em;
+  }
+
   .about-header {
     font-size: 2em;
   }
-  .profile-card {
-    font-size: medium;
-    height: 75%;
-    .details {
-      margin-bottom: 0;
-      margin-top: 0.5em;
+
+  .card-container {
+    width: 85%;
+    img {
+      width: 170px;
+    }
+    .name {
+      font-size: 1.4em;
+    }
+    .about-me {
+      .text {
+        padding: 1em;
+        font-size: smaller;
+      }
     }
   }
 
