--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -11,7 +11,7 @@ body {
 
 header {
   font-size: 2.5em;
-  padding-bottom: 2em;
+  padding-bottom: 1em;
 }
 
 .typewriter-container {
@@ -55,6 +55,7 @@ header {
     text-align: center;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
+    padding: 20px;
   }
 
   img {
@@ -62,7 +63,7 @@ header {
     width: 250px;
     border: solid #48d1cc 4px;
     border-radius: 50%;
-    margin-top: 75px;
+    margin-top: 50px;
   }
 
   .name {
